--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.1.2
-idna==3.3
-requests==2.27.1
-urllib3==1.26.9
+certifi>=2021.5.30
+charset-normalizer>=2.0.8
+click~=8.1.0
+idna>=3.1
+requests~=2.27.0
+
